--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,19 +10,9 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-- task: Maven@3
-  inputs:
-    mavenPomFile: 'pom.xml'
-    mavenOptions: '-Xmx3072m'
-    javaHomeOption: 'JDKVersion'
-    jdkVersionOption: '1.8'
-    jdkArchitectureOption: 'x64'
-    publishJUnitResults: true
-    testResultsFiles: '**/surefire-reports/TEST-*.xml'
-    goals: 'package'
 - task: Docker@2
   inputs:
     containerRegistry: 'docker_registry'
-    repository: 'samplemaven'
+    repository: 'mavenedited'
     command: 'buildAndPush'
     Dockerfile: '**/Dockerfile'
