--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,9 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<spring.version>4.2.0.RELEASE</spring.version>
+		<maven.compiler.source>1.6</maven.compiler.source>
+                <maven.compiler.target>1.6</maven.compiler.target>
+  
 	</properties>
 	 
 	<dependencies>
