--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
 			</plugin>
+			   <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-compiler-plugin</artifactId>
+                            <version>3.8.0</version>
+                          </plugin>
 		</plugins>
 	</build>
 </project>
